--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -34,7 +34,7 @@
 
 <body>
   <div class="card">
-    <h2 class="text-center mb-4">Information Filling Form</h2>
+    <h2 class="text-center mb-4">Form</h2>
 
     <form>
       <div class="mb-3">
