--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -38,7 +38,7 @@
 
     <form>
       <div class="mb-3">
-        <label>Full Name</label>
+        <label>Name</label>
         <input type="text" class="form-control" placeholder="Enter your name">
       </div>
 
